--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
           <div class="col-xs-3 centered wow fadeInDown" data-wow-delay="0.6s">
             <canvas id="html" height="130" width="130"></canvas>
-            <p>HTML/SASS</p>
+            <p>HTML/Sass</p>
           </div>
           <div class="col-xs-3 centered wow fadeInDown" data-wow-delay="0.6s">
             <canvas id="bootstrap" height="130" width="130"></canvas>
