--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="col-xs-6 block col-xs-offset-3 content wow fadeInDown" data-wow-delay="1.0s">
           <p><t>網頁前端設計師</t></p>
           <p>鼎岳資訊管理顧問有限公司</p>
-          <p class="more">在這間公司有專業分工，我負責前端的程式，學習用Laravel、SASS，與視覺設計溝通討論所要呈現的效果，後端溝通討論資料傳送、Ajax回傳。公司環境不錯、同事和睦相處好溝通、主管不會咄咄逼人，完全信任團隊作業，後來因為公司資金問題導致我不得離開。</p>
+          <p class="more">在這間公司有專業分工，我負責前端的程式，學習用Laravel、Sass，與視覺設計溝通討論所要呈現的效果，後端溝通討論資料傳送、Ajax回傳。公司環境不錯、同事和睦相處好溝通、主管不會咄咄逼人，完全信任團隊作業，後來因為公司資金問題導致我不得離開。</p>
         </div>
         <div class="col-xs-3 date wow fadeInDown" data-wow-delay="1.2s">
           <p><sm>2016/04~2017/07</sm></p>
